# feature-forge

./: .doc-site-scaffold.json  .gitattributes  .gitignore  .markdownlint.json  .rauf.json  .shellcheckrc  AGENTS-SETUP.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  LICENSE  README.md  STATUS.md  forge.config.json  llms.txt  ruff.toml
.claude-plugin/: marketplace.json  plugin.json
.rauf/: RAUF.md  REVIEW.md  backlog.json  backlog.schema.json  progress.md
adapters/: GENERATION-REPORT.md
adapters/codex/skills/forge-bootstrap/references/templates/python/: pyproject.toml
agents/: forge-researcher.md  forge-spec-writer.md  forge-verifier.md
commands/: forge-1-prd.md  forge-2-tech.md  forge-3-specs.md  forge-4-backlog.md  forge-5-docs.md  forge-fix.md  forge-init.md  forge-status.md  forge-verify.md  forge.md
docs/: clean-env-repro.md  recovery-detached-epic-member.md
docs-site/: .gitignore  REBUILD-ASSESSMENT.md  astro.config.mjs  check-docs.mjs  docs.manifest.json  docs.manifest.schema.json  package-lock.json  package.json  rehype-base-links.mjs  setup-docs.sh
eval/: run-eval.py
hooks/: hooks.json
installer/: README.md  package-lock.json  package.json  tsconfig.json
plans/: make-codex-compat.md  rauf-enhancement-recommendations.md  this-plugin-represents-an-functional-curry.md  wipe-gwg-plugins-and-live-dev-symlinks.md
references/: epic-manifest-schema.json  forge-config-schema.json  loop-agent-selection.py  pipeline-state-schema.json  portable-root.md  process-overview.md  ralph-loop-contract.md  shared-conventions.md  stack-resolution.md  (+3 more)
(+597 files in other folders)
