[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "{{PROJECT_NAME}}"
version = "0.0.0"
description = "{{PURPOSE}}"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["mypy>=1.8", "pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
files = ["src", "tests"]
strict = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
